--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,16 @@
-@import './common';
-@import './example';
+// @import '.';
+
+@import './utils/module';
+
+@import './base/module';
+
+@import './components/module';
+
+@import './layouts/module';
+
+@import './pages/main/module';
+@import './pages/restaurant/module';
+@import './pages/hotel/module';
+@import './pages/room-lux/module';
+@import './pages/room-three/module';
+@import './pages/room-two/module';
