--- a/src/partials/layouts/footer.html
+++ b/src/partials/layouts/footer.html
@@ -1,14 +1,44 @@
-<a href="../src/index.html" class="logo footer__logo">MIMINO</a>
-<ul class="footer__list">
-  <li class="footer__item">
-    <a class="footer__link" href="../src/index.html">Main page</a>
-  </li>
-  <li class="footer__item">
-    <a class="footer__link" href="../src/restaurant.html">Restaurant</a>
-  </li>
-  <li class="footer__item">
-    <a class="footer__link" href="../src/hotel.html">Hotel</a>
-  </li>
-</ul>
-<button class="btn room__btn" type="button">Make reservation</button>
-<button class="btn modal__btn" type="button">Make reservation</button>
+<section class="footer container">
+  <a href="../src/index.html" class="logo footer__logo">MIMINO</a>
+  <div class="footer__wrap">
+    <ul class="footer__list">
+      <li class="footer__item">
+        <a class="footer__link" href="../src/index.html">Main page</a>
+      </li>
+      <li class="footer__item">
+        <a class="footer__link" href="../src/restaurant.html">Restaurant</a>
+      </li>
+      <li class="footer__item">
+        <a class="footer__link" href="../src/hotel.html">Hotel</a>
+      </li>
+    </ul>
+    <ul class="social footer__social">
+      <li class="social__item social__item--framed">
+        <a class="social__link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer nofollow">
+          <span class="social__name">Instagram</span>
+          <svg class="social__icon" width="24" height="24">
+            <use href="./images/sprite.svg#instagram"></use>
+          </svg>
+
+        </a>
+      </li>
+      <li class="social__item social__item--framed">
+        <a class="social__link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer nofollow">
+          <span class="social__name">Facebook</span>
+          <svg class="social__icon" width="24" height="24">
+            <use href="./images/sprite.svg#facebook"></use>
+          </svg>
+
+        </a>
+      </li>
+      <li class="social__item social__item--framed">
+        <a class="social__link" href="https://web.telegram.org/" target="_blank" rel="noopener noreferrer nofollow">
+          <span class="social__name">Telegram</span>
+          <svg class="social__icon" width="24" height="24">
+            <use href="./images/sprite.svg#telegram"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+</section>
