--- a/src/partials/layouts/social.html
+++ b/src/partials/layouts/social.html
@@ -1,26 +1,23 @@
-<ul class="social__list">
-  <li class="social__item">
+<ul class="social">
+  <li class="social__item social__item--blank">
     <a class="social__link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer nofollow">
       <svg class="social__icon" width="24" height="24">
         <use href="./images/sprite.svg#instagram"></use>
       </svg>
-      <span>Instagram</span>
     </a>
   </li>
-  <li class="social__item">
+  <li class="social__item social__item--blank">
     <a class="social__link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer nofollow">
       <svg class="social__icon" width="24" height="24">
         <use href="./images/sprite.svg#facebook"></use>
       </svg>
-      <span>Facebook</span>
     </a>
   </li>
-  <li class="social__item">
+  <li class="social__item social__item--blank">
     <a class="social__link" href="https://web.telegram.org/" target="_blank" rel="noopener noreferrer nofollow">
       <svg class="social__icon" width="24" height="24">
         <use href="./images/sprite.svg#telegram"></use>
       </svg>
-      <span>Telegram</span>
     </a>
   </li>
 </ul>
