--- a/src/sass/components/_social.scss
+++ b/src/sass/components/_social.scss
@@ -1,37 +1,59 @@
-.social__list {
-  @media screen and (min-width: 1024px) and (max-width: 1279px) {
-    margin-top: 25px;
-  }
+.social {
   display: flex;
-
   list-style: none;
-}
 
-.social__item {
-  &:not(:last-child) {
-    margin-right: 20px;
+  &__item {
+    &--blank {
+      &:not(:last-child) {
+        margin-right: 20px;
+      }
+    }
+
+    &--framed {
+      @media screen and (min-width: 1024px) {
+        padding: 8px 12px;
+        border: 0.5px solid #f3c653;
+        border-radius: 2px;
+
+        &:not(:last-child) {
+          margin-bottom: 12px;
+        }
+      }
+
+      &:not(:last-child) {
+        @media screen and (max-width: 1023px) {
+          margin-right: 20px;
+        }
+      }
+    }
   }
-}
 
-.social__link {
-  display: flex;
-  text-decoration: none;
-  font-size: 16px;
-  line-height: 1.25;
+  &__link {
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #f3c653;
 
-  color: #f3c653;
-
-  &:hover > .social__icon,
-  &:focus > .social__icon {
-    fill: #c79002;
+    &:hover > .social__icon,
+    &:focus > .social__icon {
+      fill: #c79002;
+    }
   }
 
-  & span {
-    display: none;
+  &__icon {
+    fill: #f3c653;
+    transition: fill 250ms linear;
   }
-}
 
-.social__icon {
-  fill: #f3c653;
-  transition: fill 250ms linear;
+  &__name {
+    margin-right: 12px;
+    display: flex;
+    align-items: center;
+
+    @media screen and (max-width: 1023px) {
+      display: none;
+    }
+  }
 }
