--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -237,6 +237,10 @@
   }
 
   .hero__wrap {
+    @media screen and (min-width: 1024px) and (max-width: 1279px) {
+      margin-bottom: 25px;
+    }
+
     display: flex;
     align-items: center;
 
