fix hover & focus bugs

--- a/src/partials/layouts/header.html
+++ b/src/partials/layouts/header.html
@@ -7,7 +7,7 @@
         <svg class="nav__icon" width="24" height="24">
           <use href="./images/sprite.svg#phone"></use>
         </svg>
-        <span class="nav__hidden">095 555 95 33</span>
+        <span class="mob-hidden">095 555 95 33</span>
       </a>
     </li>
     <li class="nav__item">
@@ -17,9 +17,12 @@
           <svg class="nav__icon" width="24" height="24">
             <use href="./images/sprite.svg#phone"></use>
           </svg>
-          <span class="nav__hidden">066 849 10 89</span>
+          <span class="mob-hidden">066 849 10 89</span>
         </a>
-        <a class="nav__tel nav__hidden" href="tel:+380672758540">
+        <a class="nav__tel mob-hidden" href="tel:+380672758540">
+          <svg class="nav__icon" width="24" height="24">
+            <use href="./images/sprite.svg#phone"></use>
+          </svg>
           <span>067 275 85 40</span>
         </a>
       </div>
