--- a/src/partials/layouts/footer.html
+++ b/src/partials/layouts/footer.html
@@ -14,7 +14,8 @@
     </ul>
     <ul class="social footer__social">
       <li class="social__item social__item--framed">
-        <a class="social__link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer nofollow">
+        <a class="social__link social__link--framed" href="https://www.instagram.com/" target="_blank"
+          rel="noopener noreferrer nofollow">
           <span class="social__name">Instagram</span>
           <svg class="social__icon" width="24" height="24">
             <use href="./images/sprite.svg#instagram"></use>
@@ -23,7 +24,8 @@
         </a>
       </li>
       <li class="social__item social__item--framed">
-        <a class="social__link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer nofollow">
+        <a class="social__link social__link--framed" href="https://www.facebook.com/" target="_blank"
+          rel="noopener noreferrer nofollow">
           <span class="social__name">Facebook</span>
           <svg class="social__icon" width="24" height="24">
             <use href="./images/sprite.svg#facebook"></use>
@@ -32,7 +34,8 @@
         </a>
       </li>
       <li class="social__item social__item--framed">
-        <a class="social__link" href="https://web.telegram.org/" target="_blank" rel="noopener noreferrer nofollow">
+        <a class="social__link social__link--framed" href="https://web.telegram.org/" target="_blank"
+          rel="noopener noreferrer nofollow">
           <span class="social__name">Telegram</span>
           <svg class="social__icon" width="24" height="24">
             <use href="./images/sprite.svg#telegram"></use>
