add site structure according to techtask

--- a/src/partials/pages/hotel/hero.html
+++ b/src/partials/pages/hotel/hero.html
@@ -11,6 +11,8 @@
         <br>St. Marshal Biryuzov, 15
       </span></a>
   </address>
-  <button class="button button--gray hero__button" type="button" data-room>Room booking</button>
-  <button class="button button--gray hero__button" type="button" data-price>Room prices</button>
+  <!-- Open modal window Book Room -->
+  <button class="button button--gray hero__button" type="button" data-room>Book Room</button>
+  <!-- Open modal window Room Price -->
+  <button class="button button--gray hero__button" type="button" data-price>Room Prices</button>
 </div>
