--- a/src/partials/pages/main/hero.html
+++ b/src/partials/pages/main/hero.html
@@ -12,7 +12,8 @@
         <br>St. Marshal Biryuzov, 15
       </span></a>
   </address>
-  <button class="button button--gray hero__button" type="button" data-table>Table booking</button>
-  <button class="button button--gray hero__button" type="button" data-room>Room booking</button>
-
+  <!-- Open modal window Book Table -->
+  <button class="button button--gray hero__button" type="button" data-table>Book Table</button>
+  <!-- Open modal window Book Room -->
+  <button class="button button--gray hero__button" type="button" data-room>Book Room</button>
 </div>
