--- a/src/partials/pages/restaurant/hero.html
+++ b/src/partials/pages/restaurant/hero.html
@@ -12,6 +12,8 @@
         <br>St. Marshal Biryuzov, 15
       </span></a>
   </address>
-  <button class="button button--gray hero__button" type="button" data-table>Table booking</button>
-  <a class="button button--gray hero__button" href="#">Restaurant menu</a>
+  <!-- Open modal window Book Table -->
+  <button class="button button--gray hero__button" type="button" data-table>Book Table</button>
+  <!-- Link to Restaurant Page / Menu -->
+  <a class="button button--gray hero__button" href="./restaurant.html">Restaurant Menu</a>
 </div>
