add hero for Room page

--- a/src/partials/pages/main/about-hotel.html
+++ b/src/partials/pages/main/about-hotel.html
@@ -1,4 +1,6 @@
 <section>
-  <h2 class="visually-hidden">About our Hotel</h2>
+  <div class="container">
+    <h2 class="visually-hidden">About our Hotel</h2>
 
+  </div>
 </section>
