--- a/src/partials/pages/main/details-hotel.html
+++ b/src/partials/pages/main/details-hotel.html
@@ -1,8 +1,10 @@
 <section>
-  <h2>Hotel</h2>
+  <div class="container">
+    <h2>Hotel</h2>
 
-  <!-- Open modal window Book Room -->
-  <button class="button button--gray hero__button" type="button" data-room>Book Room</button>
-  <!-- Link to Hotel Page -->
-  <a class="button button--gray hero__button" href="./hotel.html">Hotel Page</a>
+    <!-- Open modal window Book Room -->
+    <button class="button button--gray hero__button" type="button" data-room>Book Room</button>
+    <!-- Link to Hotel Page -->
+    <a class="button button--gray hero__button" href="./hotel.html">Hotel Page</a>
+  </div>
 </section>
