--- a/src/partials/pages/main/hero.html
+++ b/src/partials/pages/main/hero.html
@@ -10,7 +10,8 @@
       </svg>
       <span class="address__value">Ukraine, Poltava,
         <br>St. Marshal Biryuzov, 15
-      </span></a>
+      </span>
+    </a>
   </address>
   <!-- Open modal window Book Table -->
   <button class="button button--gray hero__button" type="button" data-table>Book Table</button>
