--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -1,4 +1,6 @@
 <section>
-  <h1 class="visually-hidden">About our Kitchen</h1>
+  <div class="container">
+    <h1 class="visually-hidden">About our Kitchen</h1>
 
+  </div>
 </section>
