--- a/src/partials/pages/room-double/hero.html
+++ b/src/partials/pages/room-double/hero.html
@@ -1,16 +1,18 @@
-<h1 class="hero__slogan">Double</h1>
-<p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+<h1 class="hero__slogan hero__slogan--room">Room <span>for 2 Adult</span></h1>
+<p class="hero__details">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
   consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-<address class="address">
-  <a class="address__link" href="https://goo.gl/maps/Pnjo7kjwatkfAMe19" target="_blank"
-    rel="noopener noreferrer nofollow">
-    <svg class="address__icon" width="24" height="24">
-      <use href="./images/sprite.svg#map"></use>
-    </svg>
-    <span class="address__value">Ukraine, Poltava,
-      <br>St. Marshal Biryuzov, 15
-    </span></a>
-</address>
-<!-- Open modal window Book Room -->
-<button class="button button--gray hero__button" type="button" data-room>Book Room</button>
+<div class="hero__wrap">
+  <address class="address">
+    <a class="address__link" href="https://goo.gl/maps/Pnjo7kjwatkfAMe19" target="_blank"
+      rel="noopener noreferrer nofollow">
+      <svg class="address__icon" width="24" height="24">
+        <use href="./images/sprite.svg#map"></use>
+      </svg>
+      <span class="address__value">Ukraine, Poltava,
+        <br>St. Marshal Biryuzov, 15
+      </span>
+    </a>
+  </address>
+  <!-- Open modal window Book Room -->
+  <button class="button button--gray hero__button" type="button" data-room>Book Room</button>
 </div>
