--- a/src/sass/components/_bottons.scss
+++ b/src/sass/components/_bottons.scss
@@ -1,6 +1,7 @@
 // <!-- <button class="btn room__btn" type="button">Make reservation</button> -->
 // <!-- <button class="btn modal__btn" type="button">Make reservation</button> -->
 .button {
+  padding: 0;
   height: 48px;
   // padding: 14px;
   min-width: 232px;
