--- a/src/partials/pages/hotel/triple.html
+++ b/src/partials/pages/hotel/triple.html
@@ -1,8 +1,10 @@
 <section>
-  <h2>1 room for 3 adult</h2>
+  <div class="container">
+    <h2>1 room for 3 adult</h2>
 
-  <!-- Link to Room Page -->
-  <a class="button button--gray hero__button" href="./room-triple.html">Room Page</a>
-  <!-- Open modal window Room Price -->
-  <button class="button button--gray hero__button" type="button" data-price>Room Prices</button>
+    <!-- Link to Room Page -->
+    <a class="button button--gray hero__button" href="./room-triple.html">Room Page</a>
+    <!-- Open modal window Room Price -->
+    <button class="button button--gray hero__button" type="button" data-price>Room Prices</button>
+  </div>
 </section>
