--- a/src/partials/pages/main/about-restaurant.html
+++ b/src/partials/pages/main/about-restaurant.html
@@ -1,3 +1,6 @@
 <section>
-  <h2 class="visually-hidden">About our Restaurant</h2>
+  <div class="container">
+    <h2 class="visually-hidden">About our Restaurant</h2>
+
+  </div>
 </section>
