--- a/src/partials/pages/main/contacts.html
+++ b/src/partials/pages/main/contacts.html
@@ -1,4 +1,6 @@
 <section>
-  <h2 class="visually-hidden">Contacts</h2>
+  <div class="container">
+    <h2 class="visually-hidden">Contacts</h2>
 
+  </div>
 </section>
