--- a/src/partials/pages/main/details-restaurant.html
+++ b/src/partials/pages/main/details-restaurant.html
@@ -1,7 +1,9 @@
 <section>
-  <h2>Restaurant</h2>
-  <!-- Open modal window Book Table -->
-  <button class="button button--gray hero__button" type="button" data-table>Book Table</button>
-  <!-- Link to Restaurant Page / Menu -->
-  <a class="button button--gray hero__button" href="./restaurant.html">Restaurant menu</a>
+  <div class="container">
+    <h2>Restaurant</h2>
+    <!-- Open modal window Book Table -->
+    <button class="button button--gray hero__button" type="button" data-table>Book Table</button>
+    <!-- Link to Restaurant Page / Menu -->
+    <a class="button button--gray hero__button" href="./restaurant.html">Restaurant menu</a>
+  </div>
 </section>
