--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -1,6 +1,8 @@
 <section>
-  <h1>Restaurant Menu</h1>
+  <div class="container">
+    <h1>Restaurant Menu</h1>
 
-  <!-- Open modal window Book Table -->
-  <button class="button button--gray hero__button" type="button" data-table>Book Table</button>
+    <!-- Open modal window Book Table -->
+    <button class="button button--gray hero__button" type="button" data-table>Book Table</button>
+  </div>
 </section>
