--- a/src/partials/pages/room-double/amenities.html
+++ b/src/partials/pages/room-double/amenities.html
@@ -1,7 +1,9 @@
 <section>
+  <div class="container">
 
-  <!-- Open modal window Book Room -->
-  <button class="button button--gray hero__button" type="button" data-room>Book Room</button>
-  <!-- Link to Hotel Page -->
-  <a class="button button--gray hero__button" href="./hotel.html">Hotel Page</a>
+    <!-- Open modal window Book Room -->
+    <button class="button button--gray hero__button" type="button" data-room>Book Room</button>
+    <!-- Link to Hotel Page -->
+    <a class="button button--gray hero__button" href="./hotel.html">Hotel Page</a>
+  </div>
 </section>
