--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -10,6 +10,7 @@ body {
   margin-right: auto;
   width: 100%;
   padding: 0 15px;
+  position: relative;
 
   @media screen and (min-width: 414px) {
     // max-width: 384px;
