--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -22,6 +22,7 @@
     align-items: center;
 
     @media screen and (min-width: 1024px) {
+      top: 24px;
       left: 47px;
     }
     @media screen and (min-width: 1280px) {
