add contacts sestion

--- a/src/partials/layouts/header.html
+++ b/src/partials/layouts/header.html
@@ -2,25 +2,25 @@
   <a href="../src/index.html" class="logo header__logo">MIMINO</a>
   <ul class="nav__list">
     <li class="nav__item">
-      <a class="nav__link" href="../src/restaurant.html">Restaurant</a>
-      <a class="nav__tel nav__wrap" href="tel:+380955559533">
-        <svg class="nav__icon" width="24" height="24">
+      <a class="nav__link nav__link--yellow" href="../src/restaurant.html">Restaurant</a>
+      <a class="nav__tel nav__tel--white nav__wrap" href="tel:+380955559533">
+        <svg class="nav__icon nav__icon--yellow" width="24" height="24">
           <use href="./images/sprite.svg#phone"></use>
         </svg>
         <span class="mob-hidden">095 555 95 33</span>
       </a>
     </li>
     <li class="nav__item">
-      <a class="nav__link" href="../src/hotel.html">Hotel</a>
+      <a class="nav__link nav__link--yellow" href="../src/hotel.html">Hotel</a>
       <div class="nav__wrap">
-        <a class="nav__tel" href="tel:+380668491089">
-          <svg class="nav__icon" width="24" height="24">
+        <a class="nav__tel nav__tel--white" href="tel:+380668491089">
+          <svg class="nav__icon nav__icon--yellow" width="24" height="24">
             <use href="./images/sprite.svg#phone"></use>
           </svg>
           <span class="mob-hidden">066 849 10 89</span>
         </a>
-        <a class="nav__tel mob-hidden" href="tel:+380672758540">
-          <svg class="nav__icon" width="24" height="24">
+        <a class="nav__tel nav__tel--white mob-hidden" href="tel:+380672758540">
+          <svg class="nav__icon nav__icon--yellow" width="24" height="24">
             <use href="./images/sprite.svg#phone"></use>
           </svg>
           <span>067 275 85 40</span>
