--- a/src/partials/pages/main/contacts.html
+++ b/src/partials/pages/main/contacts.html
@@ -1,6 +1,56 @@
-<section>
-  <div class="container">
-    <h2 class="visually-hidden">Contacts</h2>
-
+<section class="contacts">
+  <div class="container contacts__container">
+    <div class="contacts__wrap">
+      <h2 class="visually-hidden">Contacts</h2>
+      <div>
+        <span class="logo logo--dark">MIMINO</span>
+        <h3 class="contacts__subtitel">Restaurant-hotel complex</h3>
+      </div>
+      <div>
+        <ul class="nav__list contacts__nav-list">
+          <li class="nav__item contacts__nav-item">
+            <a class="nav__link nav__link--brown" href="../src/restaurant.html">Restaurant</a>
+            <a class="nav__tel nav__tel--gray contacts__nav-wrap" href="tel:+380955559533">
+              <svg class="nav__icon nav__icon--brown" width="24" height="24">
+                <use href="./images/sprite.svg#phone"></use>
+              </svg>
+              <span>095 555 95 33</span>
+            </a>
+          </li>
+          <li class="nav__item contacts__nav-item">
+            <a class="nav__link nav__link--brown" href="../src/hotel.html">Hotel</a>
+            <div class="contacts__nav-wrap">
+              <a class="nav__tel nav__tel--gray" href="tel:+380668491089">
+                <svg class="nav__icon nav__icon--brown" width="24" height="24">
+                  <use href="./images/sprite.svg#phone"></use>
+                </svg>
+                <span>066 849 10 89</span>
+              </a>
+              <a class="nav__tel nav__tel--gray" href="tel:+380672758540">
+                <svg class="nav__icon nav__icon--brown" width="24" height="24">
+                  <use href="./images/sprite.svg#phone"></use>
+                </svg>
+                <span>067 275 85 40</span>
+              </a>
+            </div>
+          </li>
+        </ul>
+        <address class="address contacts__address">
+          <a class="address__link  address__link--gray" href="https://goo.gl/maps/Pnjo7kjwatkfAMe19" target="_blank"
+            rel="noopener noreferrer nofollow">
+            <svg class="address__icon address__icon--brown" width="24" height="24">
+              <use href="./images/sprite.svg#map"></use>
+            </svg>
+            <span class="address__value">Ukraine, Poltava,
+              <br>St. Marshal Biryuzov, 15
+            </span>
+          </a>
+        </address>
+      </div>
+    </div>
+    <iframe class="contacts__map"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d33149.477363021986!2d34.521321247474944!3d49.584865162050576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d82601f3347a5f%3A0x36f3f9aeec44a6a!2z0YPQuy4g0JzQsNGA0YjQsNC70LAg0JHQuNGA0Y7Qt9C-0LLQsCwgMTUsINCf0L7Qu9GC0LDQstCwLCDQn9C-0LvRgtCw0LLRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwg0KPQutGA0LDQuNC90LAsIDM2MDAw!5e1!3m2!1sen!2sde!4v1671111423826!5m2!1sen!2sde"
+      width="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
   </div>
 </section>
