--- a/src/partials/pages/restaurant/hero.html
+++ b/src/partials/pages/restaurant/hero.html
@@ -3,9 +3,9 @@
 <p class="hero__slogan">Taste of life 24/7</p>
 <div class="hero__wrap">
   <address class="address">
-    <a class="address__link" href="https://goo.gl/maps/Pnjo7kjwatkfAMe19" target="_blank"
+    <a class="address__link  address__link--white" href="https://goo.gl/maps/Pnjo7kjwatkfAMe19" target="_blank"
       rel="noopener noreferrer nofollow">
-      <svg class="address__icon" width="24" height="24">
+      <svg class="address__icon address__icon--yellow" width="24" height="24">
         <use href="./images/sprite.svg#map"></use>
       </svg>
       <span class="address__value">Ukraine, Poltava,
