--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,7 +8,7 @@
 
 @import './layouts/module';
 
-// @import './pages/main/module';
+@import './pages/main/module';
 // @import './pages/restaurant/';
 // @import './pages/hotel/module';
 // @import './pages/room-doublelux/module';
