--- a/src/partials/pages/hotel/hero.html
+++ b/src/partials/pages/hotel/hero.html
@@ -2,9 +2,9 @@
 <h2 class="hero__subtitel hero__subtitel--hotel">Hotel</h2>
 <div class="hero__wrap">
   <address class="address">
-    <a class="address__link" href="https://goo.gl/maps/Pnjo7kjwatkfAMe19" target="_blank"
+    <a class="address__link address__link--white" href="https://goo.gl/maps/Pnjo7kjwatkfAMe19" target="_blank"
       rel="noopener noreferrer nofollow">
-      <svg class="address__icon" width="24" height="24">
+      <svg class="address__icon address__icon--yellow" width="24" height="24">
         <use href="./images/sprite.svg#map"></use>
       </svg>
       <span class="address__value">Ukraine, Poltava,
